show api key after signup

--- a/server/templates/signup.html
+++ b/server/templates/signup.html
@@ -5,10 +5,15 @@
     <title>Signup</title>
 </head>
 <body>
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit" />
-</form>
+{% if form %}
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Submit" />
+    </form>
+{% else %}
+    {{ api_key }}
+{% endif %}
+
 </body>
 </html>
