--- a/server/templates/basic_form.html
+++ b/server/templates/basic_form.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Signup</title>
+    <title>{{ title }}</title>
 </head>
 <body>
 {% if form %}
@@ -11,8 +11,8 @@
         {{ form.as_p }}
         <input type="submit" value="Submit" />
     </form>
-{% else %}
-    {{ api_key }}
+{% elif plain_response %}
+    {{ plain_response }}
 {% endif %}
 
 </body>
