--- a/HiNote/HiNote/Base.lproj/Main.storyboard
+++ b/HiNote/HiNote/Base.lproj/Main.storyboard
@@ -30,6 +30,25 @@
             </objects>
             <point key="canvasLocation" x="1933" y="-352"/>
         </scene>
+        <!--User Sign Up-->
+        <scene sceneID="PvA-lm-BgT">
+            <objects>
+                <viewController id="c7f-ok-u3J" customClass="UserSignUp" customModule="HiNote" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="w04-Eu-DU7"/>
+                        <viewControllerLayoutGuide type="bottom" id="6mk-K8-NAL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zFL-T6-mrX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="qh4-un-tDe"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eGE-c8-eKn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1274" y="758"/>
+        </scene>
         <!--Stream Controller-->
         <scene sceneID="dq8-bN-cId">
             <objects>
@@ -135,7 +154,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="wXY-VR-umo" kind="relationship" relationship="rootViewController" id="j9t-op-ph5"/>
+                        <segue destination="c7f-ok-u3J" kind="relationship" relationship="rootViewController" id="7jx-JE-Al0"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fO8-NQ-v7J" userLabel="First Responder" sceneMemberID="firstResponder"/>
