--- a/server/templates/basic_form.html
+++ b/server/templates/basic_form.html
@@ -8,7 +8,7 @@
     <title>{{ title }}</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="" method="post">{% csrf_token %}
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit" />
