--- a/server/templates/basic_form.html
+++ b/server/templates/basic_form.html
@@ -42,7 +42,7 @@
             color: white;
         }
 
-        form {
+        #main_content {
             text-align: center;
         }
     </style>
